// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user resolver should change user password 1`] = `[Error: Password incorrect.]`;

exports[`user resolver should respond with a user 1`] = `
Object {
  "__v": 0,
  "_id": "5abba8e47af4d91c259e12ef",
  "createdAt": 1523390727,
  "email": "User1@gql.com",
  "lastLogin": 1523390727,
  "password": "test",
  "posts": Array [
    Object {
      "__v": 0,
      "_id": "5abba8e47af4d91c259e12ee",
      "author": "5abba8e47af4d91c259e12ef",
      "createdAt": 1523390727,
      "editedAt": 1523390727,
      "message": "Some message",
    },
  ],
  "subjects": Array [],
  "username": "User1",
}
`;

exports[`user resolver should respond with users 1`] = `
Array [
  Object {
    "__v": 0,
    "_id": "5abba8e47af4d91c259e12ef",
    "createdAt": 1523390727,
    "email": "User1@gql.com",
    "lastLogin": 1523390727,
    "password": "test",
    "posts": Array [],
    "subjects": Array [],
    "username": "User1",
  },
]
`;
